--- a/badges.html
+++ b/badges.html
@@ -93,7 +93,7 @@ window.onload = function () {
 	}
 		</style>
 <main style="">
-<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://cdn.discordapp.com/attachments/1004849202507038804/1061448840676384900/IMG_4146.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
+<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://media.discordapp.net/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
 <style>
 
 
@@ -355,7 +355,7 @@ window.onload = function () {
 <div class="p-10">
 <div class="not-last-child:mb-8">
 <div class="-mt-[85px]">
-<img class="w-44 h-44 rounded-full mx-auto shadow-avatar" src="" title="Image" alt="Image" draggable="false" /> </div>
+<img class="w-44 h-44 rounded-full mx-auto shadow-avatar" src="https://media.discordapp.net/attachments/1004849202507038804/1063608087988146236/BF3242D4-D63F-4DD3-906F-7A18FDF7A5FA.gif" title="Image" alt="Image" draggable="false" /> </div>
 </div>
 <div class="not-last-child:mb-8">
 <div class="flex justify-center items-center space-x-2">
