--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <div id="mainSite" style="display: none;">
 <video autoplay="autoplay" loop="" class="myVideo" id="myVideo" playsinline="">
 Your browser does not support HTML5 video.
-<source src="yt5s.io-Central Cee - Let Go [Music Video]-(1080p).mp4"></video>
+<source src="https://cdn.discordapp.com/attachments/1066409208423133234/1068988708021338242/yt5s.io-Central_Cee_-_Let_Go_Music_Video-1080p.mp4"></video>
 <div class="content">
 <div class="row1">
 <div class="column1">
