--- a/testing.html
+++ b/testing.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Hey, Im RTX">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="https://avatars.githubusercontent.com/u/71118189"/>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://bizarreadventure.xyz/main.css">
 
     <meta property="og:type" content= "website" />
     <meta property="og:site_name" content="gay black dudes" />
