--- a/testing.html
+++ b/testing.html
@@ -16,7 +16,7 @@
     <meta property="og:image" itemprop="image primaryImageOfPage" content="https://avatars.githubusercontent.com/u/71118189" />
     <meta name="keywords" content="Exie, Exieez, rtx, dib4sh">
 
-    <script src="panelsnap.js" defer></script>
+    <script src="https://bizarreadventure.xyz/panelsnap.js" defer></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () { new PanelSnap(); });
     </script>
