--- a/testing.html
+++ b/testing.html
@@ -37,37 +37,37 @@
                         <div id="badgeList">
                             <div class="badge logo">
                                 <a href="https://discord.com/users/738981890043805707" target="_blank">
-                                    <img src="images/social/discord.svg" alt="discord">
+                                    <img src="https://bizarreadventure.xyz/images/social/discord.svg" alt="discord">
                                 </a>
                             </div>
 
                             <div class="badge logo">
                                 <a href="https://github.com/Exieez" target="_blank">
-                                    <img src="images/social/github.svg" alt="github">
+                                    <img src="https://bizarreadventure.xyz/images/social/github.svg" alt="github">
                                 </a>
                             </div>
 
                             <div class="badge logo">
                                 <a href="mailto:exie@bizarreadventure.xyz" target="_blank">
-                                    <img src="images/social/mail.svg" alt="mail">
+                                    <img src="https://bizarreadventure.xyz/images/social/mail.svg" alt="mail">
                                 </a>
                             </div>
 
                             <div class="badge logo">
                                 <a href="https://www.instagram.com/ethevalvsthewrld/" target="_blank">
-                                    <img src="images/social/instagram.svg" alt="instagram">
+                                    <img src="https://bizarreadventure.xyz/images/social/instagram.svg" alt="instagram">
                                 </a>
                             </div>
 
                             <div class="badge logo">
                                 <a href="https://cash.app/$dib4sh" target="_blank">
-                                    <img src="images/social/cashapp.svg" alt="cashapp">
+                                    <img src="https://bizarreadventure.xyz/images/social/cashapp.svg" alt="cashapp">
                                 </a>
                             </div>
 
                             <div class="badge logo">
                                 <a href="https://www.roblox.com/users/1826103276/profile" target="_blank">
-                                    <img src="images/social/roblox.svg" alt="roblox">
+                                    <img src="https://bizarreadventure.xyz/images/social/roblox.svg" alt="roblox">
                                 </a>
                             </div>
                         </div>
