--- a/testing.html
+++ b/testing.html
@@ -33,7 +33,7 @@
                             <img src="https://avatars.githubusercontent.com/u/71118189">
                             <div class="status"></div>
                         </div>
-                        <h2 class="username">rtx</h2>
+                        <h2 class="username">Convicted</h2>
                         <div id="badgeList">
                             <div class="badge logo">
                                 <a href="https://discord.com/users/738981890043805707" target="_blank">
