--- a/testing.html
+++ b/testing.html
@@ -7,13 +7,13 @@
     <title>exie</title>
     <meta name="description" content="Hey, Im RTX">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="https://avatars.githubusercontent.com/u/71118189"/>
+    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png"/>
     <link rel="stylesheet" href="https://bizarreadventure.xyz/main.css">
 
     <meta property="og:type" content= "website" />
     <meta property="og:site_name" content="gay black dudes" />
     <meta name="theme-color" content="#E54B4B">
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://avatars.githubusercontent.com/u/71118189" />
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png" />
     <meta name="keywords" content="Exie, Exieez, rtx, dib4sh">
 
     <script src="https://bizarreadventure.xyz/panelsnap.js" defer></script>
@@ -30,7 +30,7 @@
                     <div class="popout-header"></div>
                     <div class="popout-body">
                         <div class="avatar">
-                            <img src="https://avatars.githubusercontent.com/u/71118189">
+                            <img src="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png">
                             <div class="status"></div>
                         </div>
                         <h2 class="username">Convicted</h2>
@@ -47,21 +47,10 @@
                                 </a>
                             </div>
 
-                            <div class="badge logo">
-                                <a href="mailto:exie@bizarreadventure.xyz" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/mail.svg" alt="mail">
-                                </a>
-                            </div>
 
                             <div class="badge logo">
                                 <a href="https://www.instagram.com/ethevalvsthewrld/" target="_blank">
                                     <img src="https://bizarreadventure.xyz/images/social/instagram.svg" alt="instagram">
-                                </a>
-                            </div>
-
-                            <div class="badge logo">
-                                <a href="https://cash.app/$dib4sh" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/cashapp.svg" alt="cashapp">
                                 </a>
                             </div>
 
@@ -71,15 +60,15 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="about-me">hi </h4>
+                        <h4 class="about-me">Owner & Developer of @ Killa.lol</h4>
                         <div class="activity">
-                            <a href="https://discord.com/users/738981890043805707" style="cursor: default;">
-                                <img src="https://lanyard-profile-readme.vercel.app/api/738981890043805707?bg=transparent&hideDiscrim=true"/>
+                            <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
+                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true"/>
                             </a>
                         </div>
                     </div>
                     <div class="popout-footer">
-                        <input type="text" placeholder="Message @Exie">
+                        <input type="text" placeholder="Message me here">
                     </div>
                 </div>
 </html>
