--- a/testing.html
+++ b/testing.html
@@ -4,17 +4,17 @@
 <head>
     <!-- Meta tags & icons -->
     <meta charset="utf-8">
-    <title>exie</title>
-    <meta name="description" content="Hey, Im RTX">
+    <title>Convicted</title>
+    <meta name="description" content="Wsg,Im Convicted">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png"/>
     <link rel="stylesheet" href="https://bizarreadventure.xyz/main.css">
 
     <meta property="og:type" content= "website" />
-    <meta property="og:site_name" content="gay black dudes" />
+    <meta property="og:site_name" content="@($)" />
     <meta name="theme-color" content="#E54B4B">
     <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png" />
-    <meta name="keywords" content="Exie, Exieez, rtx, dib4sh">
+    <meta name="keywords" content="Convicted">
 
     <script src="https://bizarreadventure.xyz/panelsnap.js" defer></script>
     <script>
@@ -63,7 +63,7 @@
                         <h4 class="about-me">Owner & Developer of @ Killa.lol</h4>
                         <div class="activity">
                             <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
-                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true"/>
+                                <img src="https://lanyard.cnrad.dev/api/1000022273673138226"/>
                             </a>
                         </div>
                     </div>
