--- a/testing.html
+++ b/testing.html
@@ -63,7 +63,7 @@
                         <h4 class="about-me">Owner & Developer of @ Killa.lol</h4>
                         <div class="activity">
                             <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
-                                <img src="https://lanyard.cnrad.dev/api/1000022273673138226"/>
+                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true"/>
                             </a>
                         </div>
                     </div>
