--- a/testing.html
+++ b/testing.html
@@ -7,13 +7,13 @@
     <title>Convicted</title>
     <meta name="description" content="Wsg,Im Convicted">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif"/>
     <link rel="stylesheet" href="https://bizarreadventure.xyz/main.css">
 
     <meta property="og:type" content= "website" />
     <meta property="og:site_name" content="@($)" />
     <meta name="theme-color" content="#E54B4B">
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png" />
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" />
     <meta name="keywords" content="Convicted">
 
     <script src="https://bizarreadventure.xyz/panelsnap.js" defer></script>
@@ -30,7 +30,7 @@
                     <div class="popout-header"></div>
                     <div class="popout-body">
                         <div class="avatar">
-                            <img src="https://cdn.discordapp.com/attachments/1068880225460551770/1069234388077912184/f612e33d59579787e231d4f97b6e6016.png">
+                            <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1057770598929006593/a5285c8b-7356-4007-97aa-5fc7d3d94e90.jpg">
                             <div class="status"></div>
                         </div>
                         <h2 class="username">Convicted</h2>
