--- a/testing.html
+++ b/testing.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Wsg,Im Convicted">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif"/>
-    <link rel="stylesheet" href="https://bizarreadventure.xyz/main.css">
+    <link rel="stylesheet" href="https://killa.lol/backrounds.css">
 
     <meta property="og:type" content= "website" />
     <meta property="og:site_name" content="@($)" />
