--- a/testing.html
+++ b/testing.html
@@ -56,79 +56,12 @@
                         <h4 class="about-me">Owner & Developer of @ Killa.lol \ Convicted#0024</h4>
                         <div class="activity">
                             <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
-                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true"/>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="popout-footer">
-                        <input type="text" placeholder="
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <!-- Meta tags & icons -->
-    <meta charset="utf-8">
-    <title>Convicted</title>
-    <meta name="description" content="Wsg,Im Convicted">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif"/>
-    <link rel="stylesheet" href="https://killa.lol/backrounds.css">
-
-    <meta property="og:type" content= "website" />
-    <meta property="og:site_name" content="@($)" />
-    <meta name="theme-color" content="#E54B4B">
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" />
-    <meta name="keywords" content="Convicted">
-
-    <script src="https://bizarreadventure.xyz/panelsnap.js" defer></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () { new PanelSnap(); });
-    </script>
-</head>
-<body class="theme-dark">
-    <div id="scroll-progress-bar"></div>
-    <section>
-        <header>
-            <div>
-                <div id="popout">
-                    <div class="popout-header"></div>
-                    <div class="popout-body">
-                        <div class="avatar">
-                            <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1057770598929006593/a5285c8b-7356-4007-97aa-5fc7d3d94e90.jpg">
-                            <div class="status"></div>
-                        </div>
-                        <h2 class="username">Convicted</h2>
-                        <div id="badgeList">
-                            <div class="badge logo">
-                                <a href="https://discord.com/users/1000022273673138226" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/discord.svg" alt="discord">
-                                </a>
-                            </div>
-
-                            <div class="badge logo">
-                                <a href="https://github.com/Cxnvicted" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/github.svg" alt="github">
-                                </a>
-                            </div>
-
-                            <div class="badge logo">
-                                <a href="https://www.roblox.com/users/1826103276/profile" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/roblox.svg" alt="roblox">
-                                </a>
-                            </div>
-                        </div>
-                        <h4 class="about-me">Owner & Developer of @ Killa.lol</h4>
-                        <div class="activity">
-                            <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
-                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true"/>
+                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true&hideStatus=true"/>
                             </a>
                         </div>
                     </div>
                     <div class="popout-footer">
                         <input type="text" placeholder="Convicted#0024">
-                    </div>
-                </div>
-</html>
-">
                     </div>
                 </div>
 </html>
