--- a/testing.html
+++ b/testing.html
@@ -53,7 +53,7 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="about-me">Owner & Developer of @ Killa.lol \ Convicted#0024</h4>
+                        <h4 class="about-me">**Owner & Developer of @ Killa.lol**</h4>
                         <div class="activity">
                             <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
                                 <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true&hideStatus=true"/>
