--- a/testing.html
+++ b/testing.html
@@ -1,67 +1,90 @@
 
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="pt">
 <head>
-    <!-- Meta tags & icons -->
-    <meta charset="utf-8">
-    <title>Convicted</title>
-    <meta name="description" content="Wsg,Im Convicted">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif"/>
-    <link rel="stylesheet" href="https://killa.lol/backrounds.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sayan</title>
+  <script>
+  const BADGES = [
+  {
+    name: "Owner of @Killa",
+    image: "https://cdn.discordapp.com/emojis/970888425634938941.webp",
+  },
+  {
+    name: "Verified",
+    image: "https://cdn.discordapp.com/emojis/921533453160292433.webp",
+  },
+];
 
-    <meta property="og:type" content= "website" />
-    <meta property="og:site_name" content="@($)" />
-    <meta name="theme-color" content="#E54B4B">
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" />
-    <meta name="keywords" content="Convicted">
+const USER_ID = "1000022273673138226";
+const BACKGROUND_IMAGE = "https://cdn.discordapp.com/attachments/1062346448752095293/1069238814486298654/killabanner2.png";
+const STATUS = {
+  dnd: {
+    name: "Do not disturb",
+    color: "#ed4245",
+  },
+  idle: {
+    name: "Absent",
+    color: "#faa81a",
+  },
+  online: {
+    name: "Available",
+    color: "#3ba55d",
+  },
+  offline: {
+    name: "Offline",
+    color: "#6e7985",
+  },
+};
+</script>
+  <link rel="icon" href="assets/images/icon.png"/>
 
-    <script src="https://bizarreadventure.xyz/panelsnap.js" defer></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () { new PanelSnap(); });
-    </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="assets/css/card.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
 </head>
-<body class="theme-dark">
-    <div id="scroll-progress-bar"></div>
-    <section>
-        <header>
-            <div>
-                <div id="popout">
-                    <div class="popout-header"></div>
-                    <div class="popout-body">
-                        <div class="avatar">
-                            <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1057770598929006593/a5285c8b-7356-4007-97aa-5fc7d3d94e90.jpg">
-                            <div class="status"></div>
-                        </div>
-                        <h2 class="username">Convicted</h2>
-                        <div id="badgeList">
-                            <div class="badge logo">
-                                <a href="https://discord.com/users/1000022273673138226" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/discord.svg" alt="discord">
-                                </a>
-                            </div>
+<body>
+  <div id="loading">
+    <div></div>
+  </div>
+  <div id="wrapper">
+    <div id="card">
+      <div id="banner"></div>
+      <div id="user-info">
+        <div id="avatar">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKpKVGgc0Ygpz6sSaBmosAeByDKkEc8btwL00m9Fdn5Lurs2frqjJm4aCnpu2Ak3He2sI&usqp=CAU" alt="Avatar de Sayan">
+          <div id="status"></div>
+        </div>
+        <div id="badges">
+        </div>
+        <div id="username">Convicted<span>#0024</span></div>
+      </div>
+      <hr />
+      <div id="about">
+      </div>
+      <div id="social">
+        <a class="social-link" href="https://www.instagram.com/bernardo.murta07" target="_blank">
+          <img src="assets/images/instagram.svg" alt="Instagram"/>
+        </a>
+      </div>
+    </div>
+  </div>
 
-                            <div class="badge logo">
-                                <a href="https://github.com/Cxnvicted" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/github.svg" alt="github">
-                                </a>
-                            </div>
+  <footer>
+    by <strong>Sayan</strong>
+  </footer>
 
-                            <div class="badge logo">
-                                <a href="https://www.roblox.com/users/1826103276/profile" target="_blank">
-                                    <img src="https://bizarreadventure.xyz/images/social/roblox.svg" alt="roblox">
-                                </a>
-                            </div>
-                        </div>
-                        <h4 class="about-me">**Owner & Developer of @ Killa.lol**</h4>
-                        <div class="activity">
-                            <a href="https://discord.com/users/1000022273673138226" style="cursor: default;">
-                                <img src="https://lanyard-profile-readme.vercel.app/api/1000022273673138226?bg=transparent&hideDiscrim=true&hideStatus=true"/>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="popout-footer">
-                        <input type="text" placeholder="Convicted#0024">
-                    </div>
-                </div>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
+
+  <script src="https://sayanzyx.netlify.app/assets/js/socket.js"></script>
+  <script src="https://sayanzyx.netlify.app/assets/js/index.js"></script>
+</body>
 </html>
