--- a/testing.html
+++ b/testing.html
@@ -39,14 +39,14 @@ const STATUS = {
   },
 };
 </script>
-  <link rel="icon" href="assets/images/icon.png"/>
+  <link rel="icon" href="https://sayanzyx.netlify.app/assets/images/icon.png"/>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="assets/css/index.css">
-  <link rel="stylesheet" href="assets/css/card.css">
+  <link rel="stylesheet" href="https://sayanzyx.netlify.app/assets/css/index.css">
+  <link rel="stylesheet" href="https://sayanzyx.netlify.app/assets/css/card.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
 </head>
@@ -59,7 +59,7 @@ const STATUS = {
       <div id="banner"></div>
       <div id="user-info">
         <div id="avatar">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKpKVGgc0Ygpz6sSaBmosAeByDKkEc8btwL00m9Fdn5Lurs2frqjJm4aCnpu2Ak3He2sI&usqp=CAU" alt="Avatar de Sayan">
+          <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" alt="Convicted's Avatar">
           <div id="status"></div>
         </div>
         <div id="badges">
