--- a/testing.html
+++ b/testing.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sayan</title>
+  <title>Convicted</title>
   <script>
   const BADGES = [
   {
@@ -71,8 +71,11 @@ const STATUS = {
       </div>
       <div id="social">
         <a class="social-link" href="https://www.instagram.com/bernardo.murta07" target="_blank">
-          <img src="assets/images/instagram.svg" alt="Instagram"/>
+          <img src="ahttps://sayanzyx.netlify.app/assets/images/instagram.svg" alt="Instagram"/>
         </a>
+        <div id="social">
+          <a class="social-link" href="https://discord.gg/GA3BtE8n2a" target="_blank">
+            <img src="https://sayanzyx.netlify.app/assets/images/instagram.svg" alt="Instagram"/>
       </div>
     </div>
   </div>
