--- a/testing.html
+++ b/testing.html
@@ -70,11 +70,11 @@ const STATUS = {
       <div id="about">
       </div>
       <div id="social">
-        <a class="social-link" href="https://www.instagram.com/bernardo.murta07" target="_blank">
-          <img src="ahttps://sayanzyx.netlify.app/assets/images/instagram.svg" alt="Instagram"/>
+        <a class="social-link" href="https://github.com/Cxnvicted" target="_blank">
+          <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262262684102758/image.png" alt="Instagram"/>
         </a>
           <a class="social-link" href="https://discord.gg/GA3BtE8n2a" target="_blank">
-            <img src="https://sayanzyx.netlify.app/assets/images/instagram.svg" alt="Instagram"/>
+            <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262164780666960/image.png" alt="Instagram"/>
       </div>
     </div>
   </div>
