--- a/testing.html
+++ b/testing.html
@@ -71,16 +71,16 @@ const STATUS = {
       </div>
       <div id="social">
         <a class="social-link" href="https://github.com/Cxnvicted" target="_blank">
-          <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262262684102758/image.png" alt="Instagram"/>
+          <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262164780666960/image.png" style="width: 30px; height: 30px;" alt="Github">
         </a>
           <a class="social-link" href="https://discord.gg/GA3BtE8n2a" target="_blank">
-            <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262164780666960/image.png" alt="Instagram"/>
+            <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262262684102758/image.png" style="width: 30px; height: 30px;" alt="Discord">
       </div>
     </div>
   </div>
 
   <footer>
-    by <strong>Sayan</strong>
+    @ <strong>Killa</strong>
   </footer>
 
   <script src="https://unpkg.com/@popperjs/core@2"></script>
