--- a/testing.html
+++ b/testing.html
@@ -74,7 +74,10 @@ const STATUS = {
           <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069263577208336395/image.png" style="width: 50px; height: 50px;" alt="Github">
         </a>
           <a class="social-link" href="https://discord.gg/GA3BtE8n2a" target="_blank">
-            <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262262684102758/image.png" style="width: 50px; height: 50px;" alt="Discord">
+            <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262164780666960/image.png" style="width: 50px; height: 50px;" alt="Discord">
+          </a>
+          <a class="social-link" href="https://www.roblox.com/users/4208898809/profile" target="_blank">
+            <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069262385908568074/image.png" style="width: 50px; height: 50px;" alt="Roblox">
       </div>
     </div>
   </div>
