--- a/testing.html
+++ b/testing.html
@@ -19,7 +19,7 @@
 ];
 
 const USER_ID = "1000022273673138226";
-const BACKGROUND_IMAGE = src="https://cdn.discordapp.com/attachments/1062346448752095293/1069238814486298654/killabanner2.png";
+const BACKGROUND_IMAGE = src="https://media.discordapp.net/attachments/1004849202507038804/1061447005349625907/IMG_4134.gif";
 const STATUS = {
   dnd: {
     name: "Do not disturb",
