--- a/testing.html
+++ b/testing.html
@@ -56,7 +56,7 @@ const STATUS = {
   </div>
   <div id="wrapper">
     <div id="card">
-      <div id="banner"></div>
+      <div id="banner">https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif</div>
       <div id="user-info">
         <div id="avatar">
           <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" alt="Convicted's Avatar">
