--- a/testing.html
+++ b/testing.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Convicted</title>
-</script>
+  <script>
   const BADGES = [
   {
     name: "Owner of @Killa",
@@ -37,340 +37,7 @@ const STATUS = {
     name: "Offline",
     color: "#6e7985",
   },
-  
-[class~="badge"] > img {
-  height: 0.208333333in;
-}
-#card {
-  background-color: var(--background-floating);
-}
-[class~="badge"] {
-  cursor: pointer;
-}
-#card {
-  border-radius: 4.5pt;
-}
-[class~="social-link"]:hover {
-  transform: scale(1.05);
-}
-#card {
-  min-width: 25pc;
-}
-hr {
-  width: calc(100% - 32px);
-}
-#card {
-  overflow: hidden;
-}
-hr {
-  height: 0.0625pc;
-}
-.social-link,
-[class~="badge"] {
-  margin-left: 0;
-}
-#card {
-  box-shadow: 0 0 0.104166667in rgba(0, 0, 0, 0.2);
-}
-#banner {
-  height: 1.25in;
-}
-#banner {
-  width: 100%;
-}
-hr,
-[class~="badge"],
-.social-link {
-  margin-bottom: 0;
-}
-hr {
-  margin-left: auto;
-}
-#avatar > img,
-#avatar {
-  width: 1in;
-}
-#banner {
-  background: url("https://cdn.discordapp.com/attachments/1062346448752095293/1069238814486298654/killabanner2.png") center/cover no-repeat;
-}
-#banner {
-  background-size: cover;
-}
-#banner {
-  background-position: center;
-}
-hr {
-  margin-right: auto;
-}
-#banner {
-  background-repeat: no-repeat;
-}
-hr {
-  margin-top: 0;
-}
-hr {
-  border-left-width: medium;
-}
-[class~="badge"] {
-  margin-right: 0.25pc;
-}
-#user-info {
-  position: relative;
-}
-#user-info {
-  padding-left: 0.166666667in;
-}
-#user-info {
-  padding-bottom: 16px;
-}
-#user-info {
-  padding-right: 0.166666667in;
-}
-#user-info {
-  padding-top: 3.5pc;
-}
-#status,
-#avatar {
-  position: absolute;
-}
-.social-link,
-[class~="badge"] {
-  margin-top: 2px;
-}
-#avatar,
-#avatar > img {
-  height: 96px;
-}
-hr {
-  border-bottom-width: medium;
-}
-#avatar,
-#avatar > img {
-  border-radius: 50%;
-}
-#avatar {
-  box-shadow: 0 0 0 0.5pc var(--background-floating);
-}
-hr {
-  border-right-width: medium;
-}
-[class~="social-link"] > img {
-  color: #fff;
-}
-#avatar {
-  top: 0;
-}
-#avatar {
-  transform: translateY(-50%);
-}
-.social-link {
-  margin-right: 4.5pt;
-}
-#status {
-  top: 91%;
-}
-hr {
-  border-top-width: medium;
-}
-#username > span,
-#about > h4 {
-  font-family: Montserrat, sans-serif;
-}
-#status {
-  right: -8px;
-}
-#status {
-  transform: translate(-50%, -50%);
-}
-#status {
-  width: 28px;
-}
-hr {
-  border-left-style: none;
-}
-hr {
-  border-bottom-style: none;
-}
-#status {
-  height: 1.75pc;
-}
-#status {
-  border-radius: 100%;
-}
-hr {
-  border-right-style: none;
-}
-#status {
-  background-color: #fff;
-}
-#status {
-  cursor: pointer;
-}
-#status {
-  border-left-width: 0.041666667in;
-}
-hr {
-  border-top-style: none;
-}
-#status {
-  border-bottom-width: 0.041666667in;
-}
-hr {
-  border-left-color: currentColor;
-}
-#status {
-  border-right-width: 0.041666667in;
-}
-.social-link {
-  transition: transform 0.3s;
-}
-#status {
-  border-top-width: 0.041666667in;
-}
-#about > h4,
-#username > span {
-  color: var(--text-muted);
-}
-#status {
-  border-left-style: solid;
-}
-#status {
-  border-bottom-style: solid;
-}
-#status {
-  border-right-style: solid;
-}
-#status {
-  border-top-style: solid;
-}
-#status {
-  border-left-color: var(--background-floating);
-}
-#status {
-  border-bottom-color: var(--background-floating);
-}
-hr {
-  border-bottom-color: currentColor;
-}
-#status {
-  border-right-color: var(--background-floating);
-}
-#status {
-  border-top-color: var(--background-floating);
-}
-#status {
-  border-image: none;
-}
-hr {
-  border-right-color: currentColor;
-}
-[class~="social-link"] > img {
-  width: 1.375pc;
-}
-#badges {
-  position: absolute;
-}
-#badges {
-  right: 16px;
-}
-#badges {
-  top: 12pt;
-}
-#username,
-#about > h4 {
-  font-weight: 700;
-}
-hr {
-  border-top-color: currentColor;
-}
-#about > h4 {
-  font-size: 9pt;
-}
-hr {
-  border-image: none;
-}
-#social,
-#badges {
-  display: flex;
-}
-#badges {
-  justify-content: flex-end;
-}
-#badges {
-  flex-wrap: wrap;
-}
-#badges {
-  max-width: 3.125in;
-}
-#badges {
-  width: 50%;
-}
-#about > h4 {
-  text-transform: uppercase;
-}
-#username {
-  font-size: 1.375pc;
-}
-#about > h4 {
-  margin-bottom: 6px;
-}
-#username {
-  font-family: Montserrat, sans-serif;
-}
-#about {
-  padding-left: 12pt;
-}
-hr {
-  outline: 0;
-}
-#social,
-#about {
-  padding-bottom: 12pt;
-}
-#about {
-  padding-right: 12pt;
-}
-#about > p {
-  font-family: Roboto, sans-serif;
-}
-#about {
-  padding-top: 12pt;
-}
-#social {
-  width: 100%;
-}
-#social {
-  justify-content: center;
-}
-hr {
-  background-color: var(--background-secondary);
-}
-#social {
-  padding-left: 0.75pc;
-}
-#social {
-  padding-right: 0.75pc;
-}
-#social {
-  padding-top: 0.375pc;
-}
-#social {
-  margin-top: 9pt;
-}
-#about > p {
-  font-size: 0.875pc;
-}
-[class~="social-link"] > img {
-  height: 22px;
-}
-@media (max-width: 512px) {
-  #card {
-    min-width: 100%;
-  }
-  #card {
-    border-radius: 0;
-  }
-}
+};
 </script>
   <link rel="icon" href="https://sayanzyx.netlify.app/assets/images/icon.png"/>
 
@@ -379,6 +46,7 @@ hr {
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://sayanzyx.netlify.app/assets/css/index.css">
+  <link rel="stylesheet" href="https://sayanzyx.netlify.app/assets/css/card.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
 </head>
@@ -389,6 +57,7 @@ hr {
   <div id="wrapper">
     <div id="card">
       <div id="banner"></div>
+         <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" alt="Convicted's Avatar">
       <div id="user-info">
         <div id="avatar">
           <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1063608629854490706/B9244D24-96C8-4450-B0AE-B2BBE6DCF79A.gif" alt="Convicted's Avatar">
